try adding z-index to fix flicker on iphone x

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -499,6 +499,7 @@ select{
   background-color: #000;
   width: 100%;
   padding: 5px 0;
+  z-index: 1;
   border-bottom: 1px solid #4c4c4c;
 }
 
